Remove AggressiveOpts JVM flag from product tests
Not used on production, we shouldn't test with it.